tests/errors/test_05.x
// Incompatible type for assignment

fn main() -> int {
    let x: int = true;
    let y: bool = 21;
    let z: char = "hello";
}